<resources>
    <string name="app_name">Text Repeater</string>

    <string name="copy">copy</string>
    <string name="repeat">repeat</string>
    <string name="quantity">How many times?</string>
    <string name="text">Enter text</string>
    <string name="text_repeater">Text Repeater</string>
    <string name="person_icon">person_icon</string>
    <string name="login_head">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="d_ont_have_an_account">D′ont have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="signup_icon">signup_icon</string>
    <string name="signup">Signup</string>
    <string name="name">Username</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="don_t_have_an_account">Don′t have an account?</string>
    <string name="login_click">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="repeat_anything_perfectly">Repeat anything. Perfectly.</string>
    <string name="text_repeatertxt">Text Repeater</string>
    <string name="repeat_icon">↺</string>
    <string name="custom_separator">custom separator</string>
    <string name="add_new_line">Add New Line</string>
    <string name="add_numbering">Add Numbering</string>
    <string name="emoji_bomb_mode_random_emojis">Emoji Bomb Mode (Random Emojis)</string>
    <string name="characters_0_lines_0">Characters: 0 | Lines: 0</string>
    <string name="result">Result</string>
    <string name="share">share</string>
    <string name="lock_icon">lock icon</string>
</resources>