<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Repeater"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

    <TextView
        android:id="@+id/headTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_repeater"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/btn_purple"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/valueTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:autofillHints="value"
        android:hint="@string/text"
        android:minHeight="48dp"
        android:inputType="text"
        android:textSize="16sp"
        android:padding="20dp"
        android:background="@drawable/rounded_images"
        tools:ignore="VisualLintTextFieldSize"/>

    <EditText
        android:id="@+id/valueNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:autofillHints="value"
        android:hint="@string/quantity"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textSize="16sp"
        android:background="@drawable/rounded_images"
        tools:ignore="VisualLintTextFieldSize"/>

    <EditText
        android:autofillHints="name"
        android:inputType="text"
        android:id="@+id/etSeparator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/custom_separator"
        android:layout_marginVertical="8dp"
        android:minHeight="48dp"
        android:background="@drawable/rounded_images"
        android:padding="20dp"
        android:textSize="16sp"
        android:layout_marginBottom="15dp"
        tools:ignore="VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <CheckBox
            android:id="@+id/cbNewLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:text="@string/add_new_line"
            android:textStyle="bold"
            android:textColor="@color/btn_purple"
            tools:ignore="VisualLintButtonSize" />

        <CheckBox
            android:id="@+id/cbNumbering"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/add_numbering"
            android:textColor="@color/btn_purple"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

        <CheckBox
            android:id="@+id/cbEmojiBomb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emoji_bomb_mode_random_emojis"
            android:textColor="@color/btn_purple"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/repeatBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/repeat"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_corner"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/copyBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:textSize="20sp"
            android:padding="5dp"
            android:background="@drawable/btn_corner"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/share"
            android:gravity="center"
            app:icon="@android:drawable/ic_menu_share"
            android:background="@drawable/btn_corner"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/valueView"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/result"
        android:padding="20dp"
        android:hint="@string/result"
        android:textColor="@color/black"
        android:paddingHorizontal="15dp"
        android:textSize="18sp"
        android:scrollbars="vertical"/>


    <TextView
        android:id="@+id/tvCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/characters_0_lines_0"
        android:textStyle="bold"
        android:textSize="20sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>